<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_normal"
        android:layout_marginRight="@dimen/padding_normal"
        android:layout_marginBottom="@dimen/padding_normal"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/card_view_radius_corner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    tools:text="type" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/color"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/type"
                    tools:text="color" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/balance_frame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/balance_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="balance" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/available_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/products_available"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/balance"
                    tools:text="299" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/available"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/available_label"
                    app:layout_constraintTop_toBottomOf="@+id/balance"
                    tools:text="299" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sold_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/products_sold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/available"
                    tools:text="299" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sold_default_value"
                    app:layout_constraintStart_toEndOf="@+id/sold_label"
                    app:layout_constraintTop_toBottomOf="@+id/available"
                    tools:text="299" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/inc_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/sold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="+"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dec_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_normal"
                    app:layout_constraintTop_toBottomOf="@+id/sold"
                    app:layout_constraintStart_toEndOf="@+id/inc_button"
                    android:text="-"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>